# Solutions-4-Luogu-Problems

./: cleanScript.py
 P5990/: CMakeLists.txt  main.cpp
AT1350/: CMakeLists.txt  main.cpp
AT2828/: CMakeLists.txt  main.cpp
AT5232/: CMakeLists.txt  main.cpp
CF12E/: CMakeLists.txt  main.cpp
CF20C/: CMakeLists.txt  main.cpp
CF23B/: CMakeLists.txt  main.cpp
CF25C/: CMakeLists.txt  main.cpp
CF28B/: CMakeLists.txt  main.cpp
CF292D/: CMakeLists.txt  main.cpp
CF53B/: CMakeLists.txt  main.cpp
CF55B/: CMakeLists.txt  main.cpp
ChineseChessZorua/: Boardgame.cpp  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
ChineseChessZoruaX/: Boardgame.h  CMakeLists.txt  Chess.cpp  Chess.h  infowindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  xq.cpp
ChineseChessZoruaX/res/: book.py
Coins/: CMakeLists.txt  main.cpp
Libai/: CMakeLists.txt  main.cpp
Linear Select/: CMakeLists.txt  main.c
P1002/: CMakeLists.txt  main.cpp
P1003/: CMakeLists.txt  main.cpp
P1004/: CMakeLists.txt  main.cpp
P1006/: CMakeLists.txt  main.cpp
P1007/: CMakeLists.txt  main.cpp
P1008/: CMakeLists.txt  main.cpp
P1010/: CMakeLists.txt  main.cpp
P1011/: CMakeLists.txt  main.cpp
P1012/: CMakeLists.txt  main.cpp
P1016/: CMakeLists.txt  main.cpp
P1017/: CMakeLists.txt  main.cpp
P1019/: CMakeLists.txt  main.cpp
P1020/: CMakeLists.txt  main.cpp
P1021/: CMakeLists.txt  main.cpp
P1022/: CMakeLists.txt  main.cpp
P1025/: CMakeLists.txt  main.cpp
P1026/: CMakeLists.txt
P1028/: CMakeLists.txt  main.cpp
P1030/: CMakeLists.txt  main.cpp
P1031/: CMakeLists.txt  main.cpp
P1032/: CMakeLists.txt  main.cpp
P1035/: CMakeLists.txt  main.cpp
P1036/: CMakeLists.txt  main.cpp
P1037/: CMakeLists.txt  main.cpp
P1040/: CMakeLists.txt  main.cpp
P1044/: CMakeLists.txt  main.cpp
P1048/: CMakeLists.txt  main.cpp
P1049/: CMakeLists.txt  main.cpp
P1052/: CMakeLists.txt  main.cpp
P1057/: CMakeLists.txt  main.cpp
P1058/: CMakeLists.txt  main.cpp
P1059/: CMakeLists.txt  main.c
P1060/: CMakeLists.txt  main.cpp
P1063/: CMakeLists.txt  main.cpp
P1064/: CMakeLists.txt  main.cpp
P1068/: CMakeLists.txt  main.cpp
P1071/: CMakeLists.txt  main.cpp
P1074/: CMakeLists.txt  main.cpp
P1075/: CMakeLists.txt  main.c
P1077/: CMakeLists.txt  main.cpp
P1079/: CMakeLists.txt
P1085/: CMakeLists.txt  main.c
P1090/: CMakeLists.txt  main.cpp
P1091/: CMakeLists.txt  main.cpp
P1094/: CMakeLists.txt  main.cpp
P1095/: CMakeLists.txt
P1096/: CMakeLists.txt  main.cpp
P1097/: CMakeLists.txt  main.cpp
P1101/: CMakeLists.txt  main.cpp
P1103/: CMakeLists.txt  main.cpp
P1104/: CMakeLists.txt  main.cpp
P1105/: CMakeLists.txt  main.cpp
P1106/: CMakeLists.txt  main.cpp
P1109/: CMakeLists.txt  main.cpp
P1111/: CMakeLists.txt  main.cpp
P1113/: CMakeLists.txt  main.cpp
P1114/: CMakeLists.txt  main.cpp
P1115/: CMakeLists.txt  main.cpp
P1116/: CMakeLists.txt  main.c
P1118/: CMakeLists.txt  main.cpp
P1119/: CMakeLists.txt
P1122/: CMakeLists.txt  main.cpp
P1123/: CMakeLists.txt  main.cpp
P1125/: CMakeLists.txt  main.cpp
P1127/: CMakeLists.txt  main.cpp
P1130/: CMakeLists.txt  main.cpp
P1135/: CMakeLists.txt  main.cpp
P1137/: CMakeLists.txt  main.cpp
P1138/: CMakeLists.txt  main.cpp
P1141/: CMakeLists.txt  main.cpp
P1142/: CMakeLists.txt  main.cpp
P1143/: CMakeLists.txt  main.cpp
P1144/: CMakeLists.txt  main.cpp
P1146/: CMakeLists.txt  main.cpp
P1147/: CMakeLists.txt  main.cpp
P1149/: CMakeLists.txt  main.cpp
P1150/: CMakeLists.txt  main.c
P1151/: CMakeLists.txt  main.c
P1152/: CMakeLists.txt  main.c
P1156/: CMakeLists.txt  main.cpp
P1157/: CMakeLists.txt  main.cpp
P1159/: CMakeLists.txt  main.cpp
P1162/: CMakeLists.txt  main.cpp
P1164/: CMakeLists.txt  main.cpp
P1168/: CMakeLists.txt  main.cpp
P1170/: CMakeLists.txt  main.cpp
P1176/: CMakeLists.txt  main.cpp
P1177/: CMakeLists.txt  main.cpp
P1179/: CMakeLists.txt  main.c
P1180/: CMakeLists.txt  main.cpp
P1181/: CMakeLists.txt  main.cpp
P1182/: CMakeLists.txt  main.cpp
P1183/: CMakeLists.txt  main.cpp
P1186/: CMakeLists.txt  main.cpp
P1192/: CMakeLists.txt  main.cpp
P1194/: CMakeLists.txt  (+1 more)
(+935 files in other folders)
